--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   <artifactId>jitsi-call</artifactId>
   <name>eXo Jitsi :: Call App :: Jitsi</name>
   <description>Jitsi Microservice</description>
-  <version>0.0.7-SNAPSHOT</version>
+  <version>1.0.x-SNAPSHOT</version>
 
   <properties>
     <!-- Defaut compiler settings -->
