Recording calls: work in progress

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,9 @@ exo.jwt.secret=${EXO_JWT_SECRET:mQzPudDBpSAqUwM0FY2r86gNAd6be5tN1xqwdFDOb4Us1DT4
 jitsi.jwt.secret=${JWT_APP_SECRET:mQzPudDBpSAqUwM0FY2r86gNAd6be5tN1xqwdFDOb4Us1DT4Tx}
 jitsi.jwt.app.id=${JWT_APP_ID:exo-jitsi}
 logging.level.org.exoplatform.jitsi=DEBUG
+
+upload.path=/var/recordings/
+# Disable default multipart resolver
+servlet.multipart.enabled: false
+
+
