Cleanup, refactored recording, enabled chat and prejoin screen

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,14 @@
 server.port=80
 
 jitsi.app.url=${PUBLIC_URL:https://dev03.exoplatform.org:8843}
+
 exo.jwt.secret=${EXO_JWT_SECRET:mQzPudDBpSAqUwM0FY2r86gNAd6be5tN1xqwdFDOb4Us1DT4Tx}
+#Path to exoplatform REST service
+exo.recordings.url=${EXO_RECORDINGS_URL:https://dev03.exoplatform.org:8443/portal/rest/jitsi/recordings}
 jitsi.jwt.secret=${JWT_APP_SECRET:mQzPudDBpSAqUwM0FY2r86gNAd6be5tN1xqwdFDOb4Us1DT4Tx}
 jitsi.jwt.app.id=${JWT_APP_ID:exo-jitsi}
+
 logging.level.org.exoplatform.jitsi=DEBUG
 
-upload.path=/var/recordings/
-# Disable default multipart resolver
-servlet.multipart.enabled: false
 
 
