Recording : implemented getUploadLink, work on finalize.sh

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ jitsi.app.url=${PUBLIC_URL:https://dev03.exoplatform.org:8843}
 
 exo.jwt.secret=${EXO_JWT_SECRET:mQzPudDBpSAqUwM0FY2r86gNAd6be5tN1xqwdFDOb4Us1DT4Tx}
 #Path to exoplatform REST service
-exo.recordings.url=${EXO_RECORDINGS_URL:https://dev03.exoplatform.org:8443/portal/rest/jitsi/recordings}
+exo.recordings.url=${EXO_RECORDINGS_URL:https://devhost.exoplatform.org:8443/portal/rest/jitsi/upload}
 jitsi.jwt.secret=${JWT_APP_SECRET:mQzPudDBpSAqUwM0FY2r86gNAd6be5tN1xqwdFDOb4Us1DT4Tx}
 jitsi.jwt.app.id=${JWT_APP_ID:exo-jitsi}
 
