Work on finalize script, uuse cache for calls

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
-server.port=80
+server.port=8001
 
 jitsi.app.url=${PUBLIC_URL:https://dev03.exoplatform.org:8843}
-
+#expire calls cache in 12 h
+calls.cache.expires=12
+#cleanup cache from expired entires every 6h
+calls.cache.cleanup=0 0 0/6 * * *
 exo.jwt.secret=${EXO_JWT_SECRET:mQzPudDBpSAqUwM0FY2r86gNAd6be5tN1xqwdFDOb4Us1DT4Tx}
 #Path to exoplatform REST service
 exo.recordings.url=${EXO_RECORDINGS_URL:https://dev03.exoplatform.org:8443/portal/rest/jitsi/upload}
