--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
     <node.version>v12.16.3</node.version>
     <npm.version>6.14.5</npm.version>
     <io.jsonwebtoken.version>0.10.5</io.jsonwebtoken.version>
+    <org.apache.commons.version>4.4</org.apache.commons.version>
     <maven-resources-plugin.version>3.2.0</maven-resources-plugin.version>
   </properties>
 
@@ -61,6 +62,12 @@
       <groupId>io.jsonwebtoken</groupId>
       <artifactId>jjwt-jackson</artifactId>
       <version>${io.jsonwebtoken.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-collections4</artifactId>
+      <version>${org.apache.commons.version}</version>
     </dependency>
 
     <dependency>
