--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -16,6 +16,7 @@
   "author": "eXo",
   "license": "LGPL",
   "devDependencies": {
+    "@mdi/font": "^5.8.55",
     "@vue/test-utils": "^1.0.0-beta.28",
     "babel-core": "^6.26.3",
     "babel-jest": "^22.4.4",
@@ -30,6 +31,7 @@
     "eslint-plugin-jest": "^21.17.0",
     "eslint-plugin-vue": "^4.5.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^6.2.0",
     "har-validator": "^5.1.3",
     "jest": "^23.6.0",
     "jest-fetch-mock": "^1.6.6",
@@ -41,17 +43,18 @@
     "less-loader": "^4.1.0",
     "url-parse": "^1.4.3",
     "vue": "^2.5.16",
+    "vue-jest": "^3.0.5",
     "vue-loader": "^14.2.3",
     "vue-template-compiler": "^2.5.16",
+    "vuetify": "^2.2.26",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.1",
     "webpack-dev-server": "^3.1.4",
-    "webpack-merge": "^4.1.3",
-    "vuetify": "^2.2.26",
-    "vue-jest": "^3.0.5"
+    "webpack-merge": "^4.1.3"
   },
   "dependencies": {
     "anchorme": "^1.1.2",
-    "autosize": "^4.0.2"
+    "autosize": "^4.0.2",
+    "material-design-icons-iconfont": "^6.1.0"
   }
 }
