Add transliteration package for special characters

--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -57,6 +57,7 @@
   },
   "dependencies": {
     "anchorme": "^1.1.2",
-    "autosize": "^4.0.2"
+    "autosize": "^4.0.2",
+    "transliteration": "^2.2.0"
   }
 }
