--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,14 @@
   <parent>
     <artifactId>addons-parent-pom</artifactId>
     <groupId>org.exoplatform.addons</groupId>
-    <version>12</version>
+    <version>14-M02</version>
     <relativePath></relativePath>
   </parent>
   <groupId>org.exoplatform</groupId>
   <artifactId>jitsi-call</artifactId>
   <name>eXo Jitsi :: Call App :: Jitsi</name>
   <description>Jitsi Microservice</description>
-  <version>1.0.x-SNAPSHOT</version>
+  <version>1.1.x-SNAPSHOT</version>
 
   <properties>
     <!-- Defaut compiler settings -->
