Use Maven resourceplugin to copy Jitsi js file

--- a/pom.xml
+++ b/pom.xml
@@ -87,10 +87,6 @@
   <build>
     <resources>
       <resource>
-        <directory>${project.build.directory}/frontend</directory>
-        <filtering>false</filtering>
-      </resource>
-      <resource>
         <directory>${project.basedir}/src/main/resources</directory>
         <filtering>true</filtering>
       </resource>
@@ -119,6 +115,27 @@
             <goals>
               <goal>repackage</goal>
             </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-resources-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>copy-resources</id>
+            <phase>prepare-package</phase>
+            <goals>
+              <goal>copy-resources</goal>
+            </goals>
+            <configuration>
+              <outputDirectory>${project.build.directory}/classes</outputDirectory>
+              <resources>
+              <resource>
+                <directory>${project.build.directory}/frontend</directory>
+              </resource>
+            </resources>
+            </configuration>
           </execution>
         </executions>
       </plugin>
