--- a/pom.xml
+++ b/pom.xml
@@ -5,17 +5,17 @@
   <parent>
     <artifactId>addons-parent-pom</artifactId>
     <groupId>org.exoplatform.addons</groupId>
-    <version>16-M01</version>
+    <version>16-devx-SNAPSHOT</version>
     <relativePath></relativePath>
   </parent>
   <groupId>org.exoplatform</groupId>
   <artifactId>jitsi-call</artifactId>
   <name>eXo Jitsi :: Call App :: Jitsi</name>
   <description>Jitsi Microservice</description>
-  <version>1.3.x-SNAPSHOT</version>
+  <version>1.3.x-devx-SNAPSHOT</version>
 
   <properties>
-    <org.exoplatform.depmgt.version>21.x-SNAPSHOT</org.exoplatform.depmgt.version>
+    <org.exoplatform.depmgt.version>21.x-devx-SNAPSHOT</org.exoplatform.depmgt.version>
     <spring-boot.version>2.3.4.RELEASE</spring-boot.version>
 
     <!-- Sonar properties -->
