--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
   <version>1.3.x-SNAPSHOT</version>
 
   <properties>
-    <org.exoplatform.depmgt.version>21.x-SNAPSHOT</org.exoplatform.depmgt.version>
+    <org.exoplatform.depmgt.version>21.0-20220707</org.exoplatform.depmgt.version>
     <spring-boot.version>2.3.4.RELEASE</spring-boot.version>
 
     <!-- Sonar properties -->
