--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@ exo.jwt.secret=${EXO_JWT_SECRET:mQzPudDBpSAqUwM0FY2r86gNAd6be5tN1xqwdFDOb4Us1DT4
 exo.recordings.url=${EXO_FILE_UPLOAD_URL:https://dev03.exoplatform.org:8443/portal/rest/jitsi/upload}
 jitsi.jwt.secret=${JWT_APP_SECRET:mQzPudDBpSAqUwM0FY2r86gNAd6be5tN1xqwdFDOb4Us1DT4Tx}
 jitsi.jwt.app.id=${JWT_APP_ID:exo-jitsi}
+signature.algorithm=${SIGNATURE_ALGORITHM:HS256}
 
 logging.level.org.exoplatform.jitsi=DEBUG
 
