--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,7 @@
   </dependencies>
 
   <build>
+    <finalName>${project.artifactId}</finalName>
     <resources>
       <resource>
         <directory>${project.basedir}/src/main/resources</directory>
