--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
   <version>1.3.x-SNAPSHOT</version>
 
   <properties>
-    <org.exoplatform.depmgt.version>21.x-exo-SNAPSHOT</org.exoplatform.depmgt.version>
+    <org.exoplatform.depmgt.version>21.0-exo-20221227</org.exoplatform.depmgt.version>
     <spring-boot.version>2.7.6</spring-boot.version>
     <exo.test.coverage.ratio>0.24</exo.test.coverage.ratio>
 
