--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,11 +5,19 @@ on:
       - '*'
 env:
   TARGET_BRANCH: 1.2.x
-  DOCKER_REPO_GIT_URL: "git@github.com:exo-docker/jitsi-call.git"
+  DOCKER_REPO_GIT_URL: "exo-docker/jitsi-call"
 jobs:
   create-tag:
     runs-on: ubuntu-latest
     steps:
+      - name: Get Release version
+        run: echo "RELEASE_VERSION=${GITHUB_REF##*/}" >> $GITHUB_ENV
+      - name: Checkout
+        uses: actions/checkout@v3
+        with: 
+          repository: ${{ env.DOCKER_REPO_GIT_URL }}
+          ref: ${{ env.TARGET_BRANCH }}
+          ssh-key: ${{ secrets.SSH_KEY }}
       - name: Import GPG key
         uses: crazy-max/ghaction-import-gpg@v5
         with:
@@ -17,22 +25,13 @@ jobs:
           passphrase: ${{ secrets.SWF_GPG_PASSPHRASE }}
           git_user_signingkey: true
           git_commit_gpgsign: true
-      - name: Install SSH key
-        uses: shimataro/ssh-key-action@v2
-        with:
-          key: ${{ secrets.SSH_KEY }}
-          known_hosts: ${{ secrets.KNOWN_HOSTS }}
       - name: Create tag
         run: |
-          current_tag=${GITHUB_REF##*/}
-          echo "Current tag: ${current_tag}"
+          echo "Current tag: ${RELEASE_VERSION}"
           git config --global user.name 'eXo Software Factory'
           git config --global user.email 'exo-swf@exoplatform.com'
-          git clone ${DOCKER_REPO_GIT_URL} /tmp/image
-          pushd /tmp/image
-          git checkout ${TARGET_BRANCH}
-          sed -Ei "s/JITSI_CALL_VERSION=.*/JITSI_CALL_VERSION=${current_tag}/" Dockerfile
+          sed -Ei "s/JITSI_CALL_VERSION=.*/JITSI_CALL_VERSION=${RELEASE_VERSION}/" Dockerfile
           git add Dockerfile
-          git commit -m "Release ${current_tag}"
-          git tag ${current_tag}_0
-          git push origin ${current_tag}_0:${current_tag}_0
+          git commit -m "Release ${RELEASE_VERSION}"
+          git tag ${RELEASE_VERSION}_0
+          git push origin ${RELEASE_VERSION}_0:${RELEASE_VERSION}_0
