[exo-release](exo-swf) continuous-release-template-exo: jitsi-callprepare release 1.4.0-20230518

--- a/pom.xml
+++ b/pom.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <artifactId>addons-exo-parent-pom</artifactId>
     <groupId>org.exoplatform.addons</groupId>
     <version>17-M02</version>
-    <relativePath></relativePath>
+    <relativePath />
   </parent>
   <groupId>org.exoplatform</groupId>
   <artifactId>jitsi-call</artifactId>
   <name>eXo Jitsi :: Call App :: Jitsi</name>
   <description>Jitsi Microservice</description>
-  <version>1.4.x-SNAPSHOT</version>
+  <version>1.4.0-20230518</version>
 
   <properties>
     <org.exoplatform.commons-exo.version>6.5.0-20230518</org.exoplatform.commons-exo.version>
@@ -197,4 +196,8 @@
       </pluginRepositories>
     </profile>
   </profiles>
+
+  <scm>
+    <tag>1.4.0-20230518</tag>
+  </scm>
 </project>
