--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,6 @@
 
   <properties>
     <org.exoplatform.commons-exo.version>6.6.x-SNAPSHOT</org.exoplatform.commons-exo.version>
-    <spring-boot.version>2.7.6</spring-boot.version>
-    <spring-context.version>5.3.24</spring-context.version>
 
     <exo.test.coverage.ratio>0.24</exo.test.coverage.ratio>
 
@@ -35,22 +33,6 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
-
-      <!-- Internal dependencies -->
-      <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-dependencies</artifactId>
-        <version>${spring-boot.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-
-
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-context</artifactId>
-        <version>${spring-context.version}</version>
-      </dependency>
     </dependencies>
   </dependencyManagement>
 
@@ -58,6 +40,12 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>ch.qos.logback</groupId>
+          <artifactId>logback-classic</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -129,7 +117,7 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
-        <version>${spring-boot.version}</version>
+        <version>3.2.0</version>
         <configuration>
           <directories>
             <directory>${project.build.directory}/frontend</directory>
