--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,6 @@ jitsi.jwt.secret=${JWT_APP_SECRET:mQzPudDBpSAqUwM0FY2r86gNAd6be5tN1xqwdFDOb4Us1D
 jitsi.jwt.app.id=${JWT_APP_ID:exo-jitsi}
 signature.algorithm=${SIGNATURE_ALGORITHM:HS256}
 
+spring.main.banner-mode=off
+logging.level.org.springframework=INFO
 logging.level.org.exoplatform.jitsi=DEBUG
-
-
-
