--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
   <version>1.5.x-SNAPSHOT</version>
 
   <properties>
-    <org.exoplatform.commons-exo.version>6.6.x-SNAPSHOT</org.exoplatform.commons-exo.version>
+    <org.exoplatform.commons-exo.version>6.6.0-20240218</org.exoplatform.commons-exo.version>
 
     <exo.test.coverage.ratio>0.24</exo.test.coverage.ratio>
 
